force-app/main/default/objects/LicenseHistory__c/LicenseHistory__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>License History</label>
    <nameField>
        <displayFormat>LH-{000000000}</displayFormat>
        <label>License History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>