force-app/main/default/objects/LicenseHistory__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>