force-app/main/default/objects/LicenseHistory__c/fields/Fee10Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee10Amount__c</fullName>
    <label>Fee 10 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>