force-app/main/default/objects/LicenseHistory__c/fields/Fee10PhaseRequired__c.field-meta.xml
<CustomField>
    <fullName>Fee10PhaseRequired__c</fullName>
    <label>Fee 10 Phase Required</label>
    <length>50</length>
    <type>Text</type>
</CustomField>