force-app/main/default/objects/LicenseHistory__c/fields/Fee10ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>Fee10ValidationDate__c</fullName>
    <label>Fee 10 Validation Date</label>
    <type>Date</type>
</CustomField>