force-app/main/default/objects/LicenseHistory__c/fields/Fee10ValidationNumber__c.field-meta.xml
<CustomField>
    <fullName>Fee10ValidationNumber__c</fullName>
    <label>Fee 10 Validation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>