force-app/main/default/objects/LicenseHistory__c/fields/Fee1Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee1Amount__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Fee 1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>