force-app/main/default/objects/LicenseHistory__c/fields/Fee1PhaseRequired__c.field-meta.xml
<CustomField>
    <fullName>Fee1PhaseRequired__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Fee 1 Phase Required</label>
    <length>50</length>
    <type>Text</type>
</CustomField>