force-app/main/default/objects/LicenseHistory__c/fields/Fee1Type__c.field-meta.xml
<CustomField>
    <fullName>Fee1Type__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Fee 1 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FeeTypes</valueSetName>
    </valueSet>
</CustomField>