force-app/main/default/objects/LicenseHistory__c/fields/Fee1ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>Fee1ValidationDate__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Fee 1 Validation Date</label>
    <type>Date</type>
</CustomField>