force-app/main/default/objects/LicenseHistory__c/fields/Fee1ValidationNumber__c.field-meta.xml
<CustomField>
    <fullName>Fee1ValidationNumber__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Fee 1 Validation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>