force-app/main/default/objects/LicenseHistory__c/fields/Fee2Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee2Amount__c</fullName>
    <label>Fee 2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>