force-app/main/default/objects/LicenseHistory__c/fields/Fee2PhaseRequired__c.field-meta.xml
<CustomField>
    <fullName>Fee2PhaseRequired__c</fullName>
    <label>Fee 2 Phase Required</label>
    <length>50</length>
    <type>Text</type>
</CustomField>