force-app/main/default/objects/LicenseHistory__c/fields/Fee2Type__c.field-meta.xml
<CustomField>
    <fullName>Fee2Type__c</fullName>
    <label>Fee 2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FeeTypes</valueSetName>
    </valueSet>
</CustomField>