force-app/main/default/objects/LicenseHistory__c/fields/Fee2ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>Fee2ValidationDate__c</fullName>
    <label>Fee 2 Validation Date</label>
    <type>Date</type>
</CustomField>