force-app/main/default/objects/LicenseHistory__c/fields/Fee2ValidationNumber__c.field-meta.xml
<CustomField>
    <fullName>Fee2ValidationNumber__c</fullName>
    <label>Fee 2 Validation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>