force-app/main/default/objects/LicenseHistory__c/fields/LicensePeriod__c.field-meta.xml
<CustomField>
    <fullName>LicensePeriod__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>License Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>