force-app/main/default/objects/LicenseHistory__c/fields/RenewalCycleLicensePeriod__c.field-meta.xml
<CustomField>
    <fullName>RenewalCycleLicensePeriod__c</fullName>
    <formula>LEFT( LicensePeriod__c , 2) + &quot;/&quot; + 



LEFT( MID(LicensePeriod__c, 3, LEN(LicensePeriod__c)) , 2) + &quot; - &quot; +

LEFT( MID(LicensePeriod__c, 5, LEN(LicensePeriod__c)) , 2)  + &quot;/&quot; + 



LEFT( MID(LicensePeriod__c, 7, LEN(LicensePeriod__c)) , 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Cycle License Period</label>
    <type>Text</type>
</CustomField>