force-app/main/default/objects/LicenseHistory__c/fields/RicoNumber__c.field-meta.xml
<CustomField>
    <fullName>RicoNumber__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Rico Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>