force-app/main/default/objects/LicenseHistory__c/fields/SuspenseDate__c.field-meta.xml
<CustomField>
    <fullName>SuspenseDate__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Suspense Date</label>
    <type>Date</type>
</CustomField>