force-app/main/default/objects/LicenseHistory__c/fields/TotalReceivedRefunded__c.field-meta.xml
<CustomField>
    <fullName>TotalReceivedRefunded__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Total Received Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>