force-app/main/default/objects/LicenseHistory__c/fields/TransactionFormula__c.field-meta.xml
<CustomField>
    <fullName>TransactionFormula__c</fullName>
    <formula>IF(

LEN(LEFT( TEXT(TransactionType__c) , FIND(&quot;(&quot;, TEXT(TransactionType__c))-1)) = 0,

RIGHT(TEXT(TransactionType__c) ,LEN(TEXT(TransactionType__c))-Find(&quot;-&quot;, TEXT(TransactionType__c) )-1),

LEFT((RIGHT(TEXT(TransactionType__c) ,LEN(TEXT(TransactionType__c))-Find(&quot;-&quot;, TEXT(TransactionType__c) )-1)) , FIND(&quot;(&quot;,(RIGHT(TEXT(TransactionType__c) ,LEN(TEXT(TransactionType__c))-Find(&quot;-&quot;, TEXT(TransactionType__c) )-1)))-1)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Formula</label>
    <type>Text</type>
</CustomField>