force-app/main/default/objects/LicenseHistory__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADDP - ADD SPECIAL PRIVILEGE</fullName>
            </value>
            <value>
                <fullName>ADT6 - ADDITIONAL TRAVEL AGENCY CLIENT TRUST ACCOUNTS</fullName>
            </value>
            <value>
                <fullName>BAP - BARBER APPRENTICE</fullName>
            </value>
            <value>
                <fullName>BCHK - BOUNCED CHECK RECORDING</fullName>
            </value>
            <value>
                <fullName>BCLF - BOUNCED CHECK - LICF</fullName>
            </value>
            <value>
                <fullName>BCNL - BOUNCED CHECK - NEW LICENSEE</fullName>
            </value>
            <value>
                <fullName>BCPY - REPAYMENT FOR BOUNCED CHECK</fullName>
            </value>
            <value>
                <fullName>BCRN - BOUNCED CHECK - RENEWAL</fullName>
            </value>
            <value>
                <fullName>BCRS - BOUNCED CHECK - RESTORATION</fullName>
            </value>
            <value>
                <fullName>BEP - BEAUTY APPRENTICE</fullName>
            </value>
            <value>
                <fullName>BOUT - REAL ESTATE BROKER OUT OF TOWN</fullName>
            </value>
            <value>
                <fullName>BPLF - BOUNCED CHECK REPAYMENT, LICF</fullName>
            </value>
            <value>
                <fullName>BPNL - BOUNCED CHECK REPAYMENT, NEW LICENSE</fullName>
            </value>
            <value>
                <fullName>BPRN - BOUNCED CHECK RENEWALS, REPAYMENT RENEWALS</fullName>
            </value>
            <value>
                <fullName>BPRS - BOUNCED CHECK RENEWALS, REPAYMENT RESTORATION</fullName>
            </value>
            <value>
                <fullName>CANL - VOLUNTARILY CANCELLED LICENSE (PEOPLE ONLY)</fullName>
            </value>
            <value>
                <fullName>CBADD - BUSINESS ADDRESS CHANGED - OLD ADDRESS RECORDED HERE (ALL LICENSE TYPES CONSIDERED A BUSINESS AND BUSINESS ADDRESS CHANGES)</fullName>
            </value>
            <value>
                <fullName>CCLLC - CORPORATION CHANGING TO LLC</fullName>
            </value>
            <value>
                <fullName>CGPC - GENERAL PARTNERSHIP CHANGING TO CORPORATION (CONVERSION)</fullName>
            </value>
            <value>
                <fullName>CLBUS - BUSINESS ADDRESS ARCHIVED DUE TO CLOSING OF BUSINESS.</fullName>
            </value>
            <value>
                <fullName>CLLCC - LLC CHANGING TO CORPORATION</fullName>
            </value>
            <value>
                <fullName>CLLCP - LLC CHANGING TO LIMITED PARTNERSHIP</fullName>
            </value>
            <value>
                <fullName>CLOS - OFFICE (CORP/PART) CLOSED</fullName>
            </value>
            <value>
                <fullName>CLPB - SITE OFFICE CLOSED DUE TO NO PRINCIPAL BROKER</fullName>
            </value>
            <value>
                <fullName>CMADD - MAILING ADDRESS CHANGED - OLD ADDRESS RECORDED HERE</fullName>
            </value>
            <value>
                <fullName>CNV - ACT 197 CONVERTED ALL DO TO DOS.</fullName>
            </value>
            <value>
                <fullName>COND - CONDITIONAL LICENSE ISSUED</fullName>
            </value>
            <value>
                <fullName>CPADD - PUBLIC ADDRESS CHANGED - OLD ADDRESS RECORDED HERE</fullName>
            </value>
            <value>
                <fullName>CPLLC - GENERAL PARTNERSHIP CHANGE TO LLC</fullName>
            </value>
            <value>
                <fullName>DECE - DECEASED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>